# pythonInOcaml

./: README.md  sample_1.py
interpreter/pythonInterpreterInOcaml/: .ocamlinit  dune-project  pythonInterpreterInOcaml.opam
interpreter/pythonInterpreterInOcaml/_build/: .db  .digest-db  log
interpreter/pythonInterpreterInOcaml/_build/default/.dune/: configurator  configurator.v2
interpreter/pythonInterpreterInOcaml/_build/default/lib/: name.ml  pythonInterpreterInOcaml.cma  pythonInterpreterInOcaml.cmxa  pythonInterpreterInOcaml.cmxs  pythonInterpreterInOcaml.ml-gen
interpreter/pythonInterpreterInOcaml/_build/default/lib/.merlin-conf/: lib-pythonInterpreterInOcaml
interpreter/pythonInterpreterInOcaml/_build/default/lib/.pythonInterpreterInOcaml.objs/: name.ml.d  pythonInterpreterInOcaml__Name.impl.all-deps
interpreter/pythonInterpreterInOcaml/_build/default/lib/.pythonInterpreterInOcaml.objs/byte/: pythonInterpreterInOcaml.cmi  pythonInterpreterInOcaml.cmo  (+4 more)
interpreter/pythonInterpreterInOcaml/_build/default/src/: interpreter.cmxa  interpreter.cmxs  lexer.ml  name.ml  tokenTypes.ml
interpreter/pythonInterpreterInOcaml/_build/default/src/.interpreter.objs/: interpreter__Lexer.intf.all-deps  pythonTypes.ml.d
interpreter/pythonInterpreterInOcaml/_build/default/src/.merlin-conf/: lib-interpreter
interpreter/pythonInterpreterInOcaml/_build/default/test/: tests.ml
interpreter/pythonInterpreterInOcaml/_build/default/test/.merlin-conf/: exe-tests
interpreter/pythonInterpreterInOcaml/lib/: dune
interpreter/pythonInterpreterInOcaml/test/: dune
(+300 files in other folders)
