(lang dune 3.6)

(name pythonInterpreterInOcaml)

(generate_opam_files true)

(source
 (github vikasreddy17/pythonInOcaml))

(authors "Vikas Thoti Reddy")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name pythonInterpreterInOcaml)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
